# turtlebot_LLM_control

./: .gitignore  BRINGUP.md  DEVELOPER_GUIDE.md  GUIDE.md  README.md  SETUP.md  USER_GUIDE.md  package.xml  report.tex  setup.py  summary.md
.claude/: settings.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_tour/lib/robot_tour/: tour_guide_start
install/robot_tour/share/robot_tour/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_tour/share/robot_tour/cmake/: robot_tourConfig-version.cmake  robot_tourConfig.cmake
install/robot_tour/share/robot_tour/environment/: ament_prefix_path.dsv  path.dsv
install/social_robot_interfaces/share/social_robot_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/social_robot_interfaces/share/social_robot_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_social_robot_interfaces__rosidl_generator_cExport-noconfig.cmake  export_social_robot_interfaces__rosidl_generator_cExport.cmake  export_social_robot_interfaces__rosidl_generator_cppExport.cmake  export_social_robot_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_social_robot_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  social_robot_interfacesConfig-version.cmake  social_robot_interfacesConfig.cmake  social_robot_interfaces__rosidl_typesupport_cExport-noconfig.cmake  social_robot_interfaces__rosidl_typesupport_cExport.cmake  social_robot_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  social_robot_interfaces__rosidl_typesupport_introspection_cExport.cmake  social_robot_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  social_robot_interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/social_robot_interfaces/share/social_robot_interfaces/environment/: ament_prefix_path.dsv  ament_prefix_path.sh  library_path.dsv  path.dsv  path.sh  pythonpath.dsv  pythonpath.sh
install/social_robot_interfaces/share/social_robot_interfaces/msg/: TspCommand.idl  TspCommand.msg
install/social_robot_interfaces/share/social_robot_interfaces/rust/: Cargo.toml  build.rs
install/social_robot_interfaces/share/social_robot_interfaces/srv/: Tours.idl  Tours.srv  (+2 more)
install/speech_locomotion_interface/lib/speech_locomotion_interface/: listening
install/speech_locomotion_interface/share/speech_locomotion_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tour_manager/lib/tour_manager/: tour_manager  tour_saver
install/tour_manager/share/tour_manager/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot_llm_control/lib/turtlebot_llm_control/: bt_orchestrator_node  emotion_node  follow_me_node  llm_intent_test  sim_initial_pose_node  speech_command_node  speech_debug_node  speech_response_node  speech_to_text_node  tour_intent_bridge_node  tour_recording_manager  tour_teleop_session  tsp_gui  waypoint_speaker
install/turtlebot_llm_control/share/turtlebot_llm_control/: GUIDE.md  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: bringup.launch.py  sim_bringup.launch.py  sim_pillar_nav_demo.launch.py  tour_maker.launch.py
log/: latest_build  latest_list
scripts/: generate_architecture_diagram.py
src/social_robot_interfaces/: CMakeLists.txt  package.xml
src/social_robot_interfaces/srv/: Description.srv
src/turtlebot_LLM_control/: .gitignore  GUIDE.md  README.md  package.xml  setup.cfg  setup.py
src/turtlebot_LLM_control/launch/: bringup.launch.py  intent_only.launch.py  sim_pillar_nav_demo.launch.py
src/turtlebot_LLM_control/resource/: turtlebot_llm_control
src/turtlebot_LLM_control/rviz/: tb3_navigation2.rviz
src/turtlebot_LLM_control/turtlebot_llm_control/: api.key.example  audio_utils.py  bt_orchestrator_node.py  emotion_node.py  knowledge_editor.py  knowledge_overlay_node.py  knowledge_store.py  llm_dialogue.py  llm_intent_test.py  sim_initial_pose_node.py  speech_command_node.py  speech_parser.py  speech_to_text_node.py  tour_intent_bridge_node.py  tour_recording_manager.py  tour_teleop_session.py  tsp_gui_node.py
src/turtlebot_social_guide/: .gitignore  frames_2026-05-01_13.00.00.gv  map.pgm  map.yaml  my_map.pgm  my_map.yaml
src/turtlebot_social_guide-dev-landmark_follower/src/robot_tour/: CMakeLists.txt  package.xml
src/turtlebot_social_guide-dev-landmark_follower/src/robot_tour/src/: tour_guide.cpp
src/turtlebot_social_guide-dev-landmark_follower/src/speech_locomotion_interface/: COLCON_IGNORE  package.xml  setup.py
src/turtlebot_social_guide-dev-landmark_follower/src/tour_manager/: setup.cfg  setup.py
src/turtlebot_social_guide/src/robot_tour/: CMakeLists.txt  package.xml  plugins.xml
src/turtlebot_social_guide/src/robot_tour/include/robot_tour/plugins/: talk_at_waypoint.hpp
src/turtlebot_social_guide/src/robot_tour/plugins/: talk_at_waypoint.cpp
src/turtlebot_social_guide/src/robot_tour/src/: tour_guide.cpp
src/turtlebot_social_guide/src/social_robot_interfaces/: CMakeLists.txt  package.xml
src/turtlebot_social_guide/src/speech_locomotion_interface/: package.xml  setup.cfg  setup.py
src/turtlebot_social_guide/src/tour_manager/: package.xml  setup.py
turtlebot_llm_control/: __init__.py  api.key.example  behavior_tree.py  bt_orchestrator_node.py  follow_me_node.py  llm_brain.py  llm_dialogue.py  memory_manager.py  models.py  predefined_commands.py  speech_command_node.py  speech_debug_node.py  speech_parser.py  speech_response_node.py  speech_to_text_node.py  tour_planner.py  waypoint_recorder.py
(+80 files in other folders)
