<?xml version="1.0"?>
<package format="3">
  <name>turtlebot_llm_control</name>
  <version>0.1.0</version>
  <description>ROS2 package scaffold for LLM-guided TurtleBot speech, navigation, and behavior-tree orchestration.</description>

  <maintainer email="karan@example.com">karan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
