<?xml version="1.0"?>
<package format="3">
  <name>turtlebot_llm_control</name>
  <version>0.2.0</version>
  <description>LLM-driven speech, behaviour-tree orchestration, and tour management for the Social Tour Guide Robot. Uses Ollama (Qwen2.5) offline and Faster-Whisper STT.</description>

  <maintainer email="karan@example.com">Karan Sharma</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>social_robot_interfaces</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- pip deps (install manually): faster-whisper sounddevice numpy -->

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
